--- a/style.css
+++ b/style.css
@@ -3,3 +3,8 @@
     display: flex;
     justify-content: center;
 }
+.poster-format{
+    display:flex;
+    justify-content: space-between ;
+    
+}
