--- a/style.css
+++ b/style.css
@@ -2,9 +2,18 @@
 .center_form{
     display: flex;
     justify-content: center;
+    color: aliceblue;
 }
-.poster-format{
-    display:flex;
-    justify-content: space-between ;
+.poster-format img{
+    
+    padding: 70px;
+    border: 100px, solid, black;
+    margin: 20px;
+    
+}
+.poster-format div{
+    color: white;
+    font-family: monospace;
+    font-size: 20px;
     
 }
