--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     justify-content: center;
     padding: 10px;
     border: 100px, soid, white;
-    margin: 20px;
+    margin: auto;
     
 }
 
@@ -24,7 +24,7 @@
     justify-content: center;
 }
 .poster-format p{
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     color: white;
     font-family: monospace;
     font-size: 17px;
