--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@
     display: flex;
     justify-content: center;
     padding: 10px;
-    border: 15px solid gold;
+    border: 15px dotted gold;
     margin: auto;
+    max-width: 100%;
     
 }
 .poster-format div{
@@ -37,14 +38,26 @@
     overflow-wrap: break-all;
     justify-content:center;
 }
-
-.movie-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-}
 @media (min-width: 768px) {
     .movie-grid {
-      grid-template-columns: repeat(3, 1fr);
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
     }
   }
+  
+  @media (max-width: 624px) {
+    .movie-grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .movie-grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+.movie-grid {
+    grid-template-columns: repeat(3, 1fr);
+}
